# recipe_embedding_and_recommendation

./: .gitignore  LICENSE  README.md
development/data_prep/: data_prep.py
development/data_prep/data/: recipe_data_1000.csv
recipe_recommendation_system/: app.py  pyproject.toml
recipe_recommendation_system/data/: recipe_data_1000.csv
recipe_recommendation_system/recipe_recommendation_system/: main.py
recipe_recommendation_system/recipe_recommendation_system/data/: df_ingredient_subtitutions_ground_truth.csv  recipe_database.db
recipe_recommendation_system/recipe_recommendation_system/modules/: database_setup.py  semantic_search.py
recipe_recommendation_system/recipe_recommendation_system/semantic_search_indices/: semantic_search_index_notes.txt
recipe_recommendation_system/templates/: base.html  index.html  recipe.html  search.html
recipe_recommendation_system/tests/: test_semantic_search.py
