[tool.poetry]
name = "recipe-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Cory Randolph <coryroyce@gmail.com>"]
readme = "README.md"
packages = [{include = "recipe_recommendation_system"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
txtai = "^5.4.0"
jupyterlab = "^3.6.3"
pathlib = "^1.0.1"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
